redpanda/redpanda-kafka-broker-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: redpanda-kafka-broker-ingress
  namespace: vienna-poc

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`test-libre-stjda.eu.boehringer.com`) && PathPrefix(`/redpanda/kafka`)
      services:
        - name: redpanda-external
          namespace: vienna-poc
          port: 9094
      middlewares:
        - name: redpanda-strip
          namespace: vienna-poc
  tls:
    domains:
      - main: test-libre-stjda.eu.boehringer.com
